--- a/WolvenKit/Views/HomePage/HomePageView.xaml
+++ b/WolvenKit/Views/HomePage/HomePageView.xaml
@@ -121,6 +121,11 @@
                                 <iconPacks:PackIconBoxIcons Height="13" Kind="RegularInfoCircle" Width="13" HorizontalAlignment="Center"/>
                             </hc:SideMenuItem.Icon>
                         </hc:SideMenuItem>
+                        <hc:SideMenuItem x:Name="SideMenu_WebsiteItem" Header="Website"  Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_WebsiteItem_Selected" >
+                            <hc:SideMenuItem.Icon>
+                                <iconPacks:PackIconCodicons Height="13" Kind="Cloud" Width="13" HorizontalAlignment="Center"/>
+                            </hc:SideMenuItem.Icon>
+                        </hc:SideMenuItem>
                     </hc:SideMenuItem>
 
 
