--- a/WolvenKit/Views/RibbonView.xaml
+++ b/WolvenKit/Views/RibbonView.xaml
@@ -9,46 +9,13 @@
                    xmlns:orccontrols="http://schemas.wildgums.com/orc/controls"
                    xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
                    xmlns:views="clr-namespace:WolvenKit.Views"
-                       xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-
-                   xmlns:orctheming="http://schemas.wildgums.com/orc/theming" xmlns:HomeView="clr-namespace:WolvenKit.Views.HomePage">
+                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                   xmlns:orctheming="http://schemas.wildgums.com/orc/theming"
+                   xmlns:HomeView="clr-namespace:WolvenKit.Views.HomePage">
 
     <!-- Resources -->
     <UserControl.Resources>
-        <ResourceDictionary>
-            <svgc:SvgViewbox x:Key="IconMoveTo" Source="/Resources/Svg/MoveToSubmodule_16x.svg"/>
-            <svgc:SvgViewbox x:Key="IconSelectObject" Source="/Resources/Svg/SelectObject_16x.svg"/>
-            <svgc:SvgViewbox x:Key="IconNewSolutionFolder" Source="/Resources/Svg/NewSolutionFolder_16x.svg"/>
-            <svgc:SvgViewbox x:Key="IconOpenFolder" Source="/Resources/Svg/OpenFolder_16x.svg"/>
-            <svgc:SvgViewbox x:Key="IconClose" Source="/Resources/Svg/Close_16x.svg"/>
-
-            <svgc:SvgViewbox x:Key="IconNewFile" Source="/Resources/Svg/NewFile_16x.svg"/>
-            <svgc:SvgViewbox x:Key="IconOpenFile" Source="/Resources/Svg/OpenFile_16x.svg"/>
-            <svgc:SvgViewbox x:Key="IconImportFile" Source="/Resources/Svg/ImportFile_16x.svg"/>
-            <svgc:SvgViewbox x:Key="IconSearchFolder" Source="/Resources/Svg/SearchFolderClosed_16x.svg"/>
-
-            <svgc:SvgViewbox x:Key="IconRun" Source="/Resources/Svg/Run_16x.svg"/>
-            <svgc:SvgViewbox x:Key="IconRunTest" Source="/Resources/Svg/RunTest_16x.svg"/>
-            <svgc:SvgViewbox x:Key="IconSettings" Source="/Resources/Svg/Settings_16x.svg"/>
-
-
-            <svgc:SvgViewbox x:Key="IconLog" Source="/Resources/Svg/EventLog_16x.svg"/>
-            <svgc:SvgViewbox x:Key="IconProjectExplorer" Source="/Resources/Svg/SQLServerObjectExplorer_16x.svg"/>
-            <svgc:SvgViewbox x:Key="IconImportUtility" Source="/Resources/Svg/ImportTheme_16x.svg"/>
-            <svgc:SvgViewbox x:Key="IconProperties" Source="/Resources/Svg/Property_left_16x.svg"/>
-
-            <svgc:SvgViewbox x:Key="IconExpandAll" Source="/Resources/Svg/ExpandAll_16x.svg"/>
-            <svgc:SvgViewbox x:Key="IconCollapseAll" Source="/Resources/Svg/CollapseAll_16x.svg"/>
-            <svgc:SvgViewbox x:Key="IconExpand" Source="/Resources/Svg/ExpandChevronDownGroup_16x.svg"/>
-            <svgc:SvgViewbox x:Key="IconCollapse" Source="/Resources/Svg/CollapseChevronUpGroup_16x.svg"/>
-
-
-
-            <BitmapImage x:Key="IconGit" 
-                         UriSource="pack://application:,,,/Resources/Images/git.png" />
-            <BitmapImage x:Key="IconPreferences" 
-                         UriSource="pack://application:,,,/Resources/Images/Preferences_light_64x.png" />
-
+        <ResourceDictionary>      
         </ResourceDictionary>
     </UserControl.Resources>
 
@@ -301,7 +268,7 @@
                         </fluent:ComboBox.ItemsPanel>
                         <ComboBoxItem x:Name="CBAssetBrowserItem" Content="Asset Browser" Selected="CBAssetBrowserItem_Selected"/>
                         <ComboBoxItem x:Name="CBCodeEditorItem" Content="Code Editor (WIP)" Selected="CBCodeEditorItem_Selected"/>
-                        <ComboBoxItem x:Name="CBPluginManager" Content="Plugin Manager (WIP)" Selected="CBPluginManager_Selected"/>
+                        <ComboBoxItem x:Name="CBPluginManager" Content="Plugin Manager" Selected="CBPluginManager_Selected"/>
                         <ComboBoxItem x:Name="CBVisualEditorItem" Content="Visual Editor (WIP)" Selected="CBVisualEditorItem_Selected"/>
                     </fluent:ComboBox>
 
