--- a/WolvenKit/Views/HomePage/HomePageView.xaml
+++ b/WolvenKit/Views/HomePage/HomePageView.xaml
@@ -1,49 +1,37 @@
-﻿<catel:UserControl
-                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com"
-                   xmlns:hc="https://handyorg.github.io/handycontrol"
+﻿<catel:UserControl    
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:catel="http://schemas.catelproject.com"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:av="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-    xmlns:Mid="clr-namespace:WolvenKit.Views.HomePage" xmlns:HPPage="clr-namespace:WolvenKit.Views.HomePage.Pages" xmlns:Fluent="urn:fluent-ribbon"
+    xmlns:Mid="clr-namespace:WolvenKit.Views.HomePage" 
+    xmlns:HPPage="clr-namespace:WolvenKit.Views.HomePage.Pages" 
+    xmlns:Fluent="urn:fluent-ribbon"
     mc:Ignorable="av"
-    x:Class="WolvenKit.Views.HomePage.HomePageView"
-                   >
+    x:Class="WolvenKit.Views.HomePage.HomePageView">
+
     <catel:UserControl.Resources>
         <ResourceDictionary>
-
-
             <ResourceDictionary.MergedDictionaries>
-
                 <hc:Theme Name="HandyTheme"/>
                 <hc:Theme Skin="Dark"/>
-
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
     </catel:UserControl.Resources>
+
     <Grid MinWidth="1024" MinHeight="720" >
 
-
-
-
         <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="200,0,450,0">
-
             <Mid:TopicView x:Name="TopicViewer"/>
-
-
         </Grid>
 
         <Grid HorizontalAlignment="Left" Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
 
-
-
-
-
-
-
             <hc:TransitioningContentControl Margin="0,60,0,0">
+
                 <hc:SideMenu x:Name="LeftSideMenu" SideBrush="{DynamicResource MahApps.Brushes.ThemeBackground}" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" BorderThickness="0" Width="200" SubSideBrush="{DynamicResource MahApps.Brushes.Accent}">
                     <hc:Interaction.Triggers>
                         <hc:EventTrigger EventName="SelectionChanged">
@@ -67,9 +55,6 @@
                                 <iconPacks:Codicons Height="13" Kind="DebugStart" Width="13"/>
                             </hc:SideMenuItem.Icon>
                         </hc:SideMenuItem>
-
-
-
                     </hc:SideMenuItem>
 
                     <hc:SideMenuItem Header="Project" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}">
@@ -86,14 +71,12 @@
                                 <iconPacks:Codicons Height="13" Kind="NewFile" Width="13"/>
                             </hc:SideMenuItem.Icon>
                         </hc:SideMenuItem>
-
                     </hc:SideMenuItem>
 
                     <hc:SideMenuItem x:Name="SideMenu_SettingsItem" Header="Settings"  Margin="0,0,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_SettingsItem_Selected">
                         <hc:SideMenuItem.Icon>
                             <iconPacks:Codicons Height="25" Kind="Settings" Width="25" />
                         </hc:SideMenuItem.Icon>
-
                     </hc:SideMenuItem>
 
                     <hc:SideMenuItem x:Name="SideMenu_InformationItem" Header="Information" Margin="0,0,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}">
@@ -127,11 +110,10 @@
                             </hc:SideMenuItem.Icon>
                         </hc:SideMenuItem>
                     </hc:SideMenuItem>
-
-
                 </hc:SideMenu>
 
             </hc:TransitioningContentControl>
+
             <Fluent:Button Height="39" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="15,0,0,15" Background="{x:Null}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" BorderBrush="{x:Null}"
                                    IsDefinitive="True">
                 <Fluent:Button.LargeIcon>
@@ -267,14 +249,9 @@
 
 
             <Label  Margin="0,-5,30,0" VerticalAlignment="Top" Width="185" Background="{x:Null}" Height="65" Content="What's New?" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" BorderBrush="{x:Null}" FontSize="24" HorizontalAlignment="Right"/>
-            <hc:Divider LineStrokeThickness="3" VerticalAlignment="Top" Margin="10,54,10,0" LineStroke="{DynamicResource MahApps.HamburgerMenu.Pane.Background}">
-
-            </hc:Divider>
+            <hc:Divider LineStrokeThickness="3" VerticalAlignment="Top" Margin="10,54,10,0" LineStroke="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"/>
         </Grid>
-
-
-        <Grid  x:Name="PageViewGrid" Margin="200,0,0,0" >
-        </Grid>
+        <Grid x:Name="PageViewGrid" Margin="200,0,0,0"/>
     </Grid>
 
 </catel:UserControl>
