--- a/WolvenKit/Views/HomePage/Pages/RecentProjectView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/RecentProjectView.xaml
@@ -135,20 +135,31 @@
                             <DataTemplate>
                                 <GroupBox  Style="{StaticResource GroupBoxTabBaseStyle}" >
                                     <GroupBox.Header >
-                                        <Border Background="{DynamicResource MahApps.Brushes.Accent3}" CornerRadius="15,2,2,2">
-                                                <hc:Tag Height="40" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Background="{x:Null}"  MinWidth="350" MaxWidth="350" Margin="3" ShowCloseButton="False">
+                                        <Border Background="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}" CornerRadius="15,2,2,2">
+                                                <hc:Tag  Height="40" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Background="{x:Null}"  MinWidth="350" MaxWidth="350" Margin="3" ShowCloseButton="False">
                                                     <hc:Tag.Content>
                                                         <TextBlock HorizontalAlignment="Left" Margin="0,0,0,0" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" FontSize="16"   Text="Project Name"></TextBlock>
                                                     </hc:Tag.Content>
                                                     <hc:Tag.Header>
-                                                        <Image />
+                                                    <Border>
+                                                        <Border.Effect>
+                                                            <hc:GrayScaleEffect/>
+                                                        </Border.Effect>
+                                                        <Image Source="{StaticResource  Fluent.Ribbon.Images.DefaultPlaceholder}">
+                                                            <Image.Effect>
+
+                                                                <hc:BrightnessEffect Brightness="0.3"/>
+                                                            </Image.Effect>
+                                                        </Image>
+                                                    </Border>
+                                             <!--Bind to project Image-->
                                                     </hc:Tag.Header>
 
                                                 </hc:Tag>
                                         </Border>
                                       
                                     </GroupBox.Header>
-                                    <Border   BorderThickness="1,0,1,1" BorderBrush="{DynamicResource MahApps.Brushes.Accent3}" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"  CornerRadius="0,0,4,4">
+                                    <Border   BorderThickness="1,0,1,1" BorderBrush="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"  CornerRadius="0,0,4,4">
 
 
 
@@ -159,14 +170,14 @@
                                                 <StackPanel Margin="5" Orientation="Horizontal">
                                                     <hc:Divider Margin="5,15" LineStroke="{DynamicResource MahApps.Brushes.Accent3}" LineStrokeThickness="2" Width="15"/>
 
-                                                    <Border VerticalAlignment="Center" Height="25" Background="{DynamicResource MahApps.Brushes.Accent3}" CornerRadius="5,2,2,2">
+                                                    <Border VerticalAlignment="Center" Height="25" Background="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}" CornerRadius="5,2,2,2">
                                                         <TextBlock Width="280" Margin="5" VerticalAlignment="Center"  Text="Project Type : "/>
                                                     </Border>
 
                                                 </StackPanel>
                                                 <StackPanel Margin="5" Orientation="Horizontal">
                                                     <hc:Divider Margin="5,15" LineStroke="{DynamicResource MahApps.Brushes.Accent3}" LineStrokeThickness="2" Width="15"/>
-                                                    <Border VerticalAlignment="Center" Height="25" Background="{DynamicResource MahApps.Brushes.Accent3}" CornerRadius="5,2,2,2">
+                                                    <Border VerticalAlignment="Center" Height="25" Background="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}" CornerRadius="5,2,2,2">
                                                         <TextBlock Width="280" Margin="5" VerticalAlignment="Center"  Text="Last Modified : "/>
                                                     </Border>
                                                 </StackPanel>
