--- a/WolvenKit/Views/VisualEditor/NodeNetworkHelper/NodeNetworkView.xaml
+++ b/WolvenKit/Views/VisualEditor/NodeNetworkHelper/NodeNetworkView.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WolvenKit.Views.VisualEditor.NodeNetworkHelper" xmlns:nodenetwork="clr-namespace:NodeNetwork.Views;assembly=NodeNetwork"
+        xmlns:local="clr-namespace:WolvenKit.Views.VisualEditor.NodeNetworkHelper" 
+        xmlns:nodenetwork="clr-namespace:NodeNetwork.Views;assembly=NodeNetwork"
         mc:Ignorable="d">
     <Grid>
         <nodenetwork:NetworkView x:Name="networkView" />
