--- a/WolvenKit/Views/VisualEditor/VisualEditorView.xaml
+++ b/WolvenKit/Views/VisualEditor/VisualEditorView.xaml
@@ -3,7 +3,7 @@
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   MinHeight="600"
                   MinWidth="600"
-                  xmlns:catel="http://schemas.catelproject.com" xmlns:Vis="clr-namespace:WolvenKit.Views.VisualEditor.Blocks" >
+                  xmlns:catel="http://schemas.catelproject.com" xmlns:Vis="clr-namespace:WolvenKit.Views.VisualEditor.Blocks" xmlns:nodenetwork="clr-namespace:NodeNetwork.Views;assembly=NodeNetwork" xmlns:nod="clr-namespace:WolvenKit.Views.VisualEditor.NodeNetworkHelper">
                    
 
     <Grid >
